# GameViewerTest

./: CMakeLists.txt  GameViewerTest.vcxproj  README.md  test.cpp
Debug/: GameViewer.lib  pch.nativecodeanalysis.sarif  pch.nativecodeanalysis.xml  start.bat  test.nativecodeanalysis.sarif  test.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc142.idb
Debug/GameViewerTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameViewerTest.lastbuildstate  GameViewerTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/GameViewerTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameViewerTest.lastbuildstate  GameViewerTest.write.1u.tlog
